Add url_with_domain switch, v0.2.0

--- a/templates/etc/local.conf.erb
+++ b/templates/etc/local.conf.erb
@@ -6,8 +6,8 @@
 #
 
 OUTPUT=<%= scope.lookupvar('rear::output') %>
-OUTPUT_URL=<%= scope.lookupvar('rear::output_url') %>
+OUTPUT_URL=<%= scope.lookupvar('rear::config::local_output_url') %>
 BACKUP=<%= scope.lookupvar('rear::backup') %>
-BACKUP_URL=<%= scope.lookupvar('rear::backup_url') %>
+BACKUP_URL=<%= scope.lookupvar('rear::config::local_backup_url') %>
 SSH_ROOT_PASSWORD=<%= scope.lookupvar('rear::ssh_root_password') %>
 BACKUP_PROG_EXCLUDE=("${BACKUP_PROG_EXCLUDE[@]}" '/media' '/var/tmp' '/var/crash')
